fix(security,audit): resolve backend & frontend flaws, clean up mock data, and add master viva guide